--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); /* Montserrat   */
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap"); /* Inter */
+@import url("https://fonts.googleapis.com/css2?family=Libre+Bodoni&display=swap");
+/*
+
+font-family: 'Montserrat', sans-serif;
+font-family: 'Inter', sans-serif;
+font-family: 'Libre Bodoni', serif;
+
+*/
 
 * {
   padding: 0;
@@ -12,7 +20,26 @@
   --red-color: #f02828;
   --blue-color: #0071dc;
   --black-color: #000000;
+  --white-color: #f6f6f6;
 }
+
+h1 {
+  font-size: 22px;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600 !important;
+}
+
+body {
+  background-color: var(--white-color);
+}
+
+/* ---------------------------------------------------Navbar Style--------------------------------------------------- */
 
 .logo {
   width: 200px;
@@ -20,7 +47,7 @@
 }
 
 .navbar {
-  background-color: var(--blue-color) !important;
+  background-color: var(--yellow-color) !important;
   font-family: "Inter", sans-serif;
   font-size: 12px;
 }
@@ -75,3 +102,150 @@
   margin-top: -13px;
   margin-left: -10px;
 }
+
+/* ---------------------------------------------------Navbar Style Ends--------------------------------------------------- */
+
+/* ---------------------------------------------------Category Style --------------------------------------------------- */
+
+.category-btn {
+  font-size: 11px;
+  background-color: var(--black-color);
+  color: white;
+  padding: 0.87em 1em;
+  border-radius: 0.7em;
+}
+
+.customer-service {
+  font-size: 10px;
+  font-family: "Montserrat", sans-serif;
+  position: absolute;
+  left: 5em;
+  top: 3em;
+}
+
+.category-list {
+  margin-left: -15rem;
+}
+
+.category-list li {
+  list-style-type: none;
+  margin-top: 1.2em;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.contact {
+  position: relative;
+}
+
+.contact img {
+  margin-right: 1em;
+  margin-top: 0.5em;
+}
+
+/* ---------------------------------------------------Category Style Ends--------------------------------------------------- */
+
+/* ---------------------------------------------------Hero SectionStyle --------------------------------------------------- */
+.hero-sec {
+  background-image: url(./Images/homepage-banner.png);
+  background-repeat: no-repeat;
+  height: 414px;
+  width: 1185px;
+  border-radius: 22px;
+}
+
+.clerical {
+  font-family: "Libre Bodoni";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px !important;
+  line-height: 80px;
+  margin: 2rem 0 0 1rem;
+}
+
+.hurry-up {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 3rem 0 0 1rem;
+}
+
+.read-more {
+  width: 132px;
+  height: 41px;
+  background: #f0d028;
+  border-radius: 8px;
+  margin: 2.5rem 0 0 1rem;
+  color: white;
+  border: none !important;
+}
+/* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */
+
+/* ---------------------------------------------------Office and School--------------------------------------------------- */
+
+.school {
+  background: url(./Images/school.png);
+  height: 335px;
+  width: 573px;
+}
+
+.office {
+  background: url(./Images/office.png);
+  height: 335px;
+  width: 573px;
+}
+
+.office-btn {
+  width: 123.28px;
+  height: 42px;
+  background: #f0d028;
+  border: none;
+  color: white;
+  margin: 4rem 0rem 0 3rem;
+  font-family: "Montserrat", sans-serif;
+}
+.shop-now-btn {
+  color: white;
+  padding: 4px 12px;
+  background: #4f8bdb;
+  border-radius: 2px;
+  border: none;
+  margin: 10rem 0rem 0 3rem;
+  font-family: "Montserrat", sans-serif;
+}
+
+/* ------------------------------------------------Office and School Ends------------------------------------------------ */
+
+/* ---------------------------------------------------Catalog Style--------------------------------------------------- */
+.card-title {
+  font-size: 13px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+.card-text {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600 !important;
+  color: black;
+}
+
+.add-btn {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  width: 90px;
+  height: 32px;
+  background: #f0d028;
+  border-radius: 6px;
+  border: none !important;
+  margin-left: 2.5rem;
+}
+
+.catalog .card {
+  width: 10rem;
+  margin-top: 0.5rem;
+}
+/* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */
