--- a/CSS/index.css
+++ b/CSS/index.css
@@ -249,7 +249,61 @@ body {
   margin-top: 0.5rem;
 }
 /* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */
+/* ---------------------------------------------------Image Overlay--------------------------------------------------- */
+.img-overlay {
+  background: linear-gradient(
+      rgba(217, 217, 217, 0.79),
+      rgba(217, 217, 217, 0.79)
+    ),
+    url(../Images/homepage-banner.png) no-repeat;
+  border-radius: 13px;
+  font-family: "Montserrat";
+}
 
-/* ---------------------------------------------------Deals Of The Week --------------------------------------------------- */
+.img-overlay input {
+  background-color: transparent;
+  width: 399px;
+  height: 47px;
+  border: 1px solid rgba(0, 0, 0, 0.29);
+}
 
-/* -------------------------------------------------Deals Of The Week Ends ------------------------------------------------- */
+.img-overlay input:focus {
+  background-color: transparent;
+}
+.img-overlay button {
+  color: white;
+  background: #ff0000;
+  border: 1px solid rgba(0, 0, 0, 0.29);
+  width: 130px;
+  height: 47px;
+}
+
+.subscribe-for-the-news {
+  font-size: 24px;
+  margin-top: 1rem;
+}
+
+/* ---------------------------------------------------Image Overlay Ends--------------------------------------------------- */
+
+/* ---------------------------------------------------Footer --------------------------------------------------- */
+.list-group {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+}
+
+.list-group-item {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.play-store {
+  height: 33px;
+  width: 100px;
+  border-radius: 0px;
+}
+/* ---------------------------------------------------Footer Ends--------------------------------------------------- */
