--- a/CSS/index.css
+++ b/CSS/index.css
@@ -279,6 +279,7 @@ body {
 
 /* ---------------------------------------------------Image Overlay--------------------------------------------------- */
 .img-overlay {
+  width: 1445px;
   background: linear-gradient(
       rgba(217, 217, 217, 0.79),
       rgba(217, 217, 217, 0.79)
