--- a/CSS/index.css
+++ b/CSS/index.css
@@ -40,7 +40,7 @@ body {
 }
 
 .row {
-  max-width: 1520px;
+  max-width: 1496px;
 }
 
 /* ---------------------------------------------------Navbar Style--------------------------------------------------- */
@@ -153,7 +153,7 @@ body {
 
 /* ---------------------------------------------------Hero SectionStyle --------------------------------------------------- */
 .hero-sec {
-  width: 1445px;
+  width: 1496px;
   background-image: url(../Images/homepage-banner.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -191,10 +191,40 @@ body {
 /* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Menu --------------------------------------------------- */
-.menu img {
-  width: 130px;
-  margin-right: 0.8em;
+.menu {
+  max-width: 1496px;
 }
+.menu img {
+  width: 120px;
+}
+
+.card-images .one,
+.three {
+  margin-right: 28px;
+}
+.four {
+  margin-right: 30px;
+}
+.five {
+  margin-right: 28px;
+}
+.six,
+.nine {
+  margin-right: 28px;
+}
+.ten {
+  margin-right: 28px !important;
+}
+
+.card-images .seven,
+.eight {
+  margin-right: 30px;
+}
+
+.card-images .two {
+  margin-right: 30px;
+}
+
 /* ---------------------------------------------------Menu Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Office and School--------------------------------------------------- */
@@ -202,15 +232,15 @@ body {
 .school {
   background: url(../Images/school.png);
   background-size: cover;
-  max-width: 700px;
+  max-width: 780px;
   height: 335px;
 }
 
 .office {
+  max-width: 780px;
   background: url(../Images/office.png);
   background-size: cover;
   height: 335px;
-  max-width: 700px;
 }
 
 .office-btn {
@@ -262,24 +292,27 @@ body {
 
 .catalog .card {
   width: 10rem;
-  margin-top: 0.5rem;
 }
 
 .catalog .col-md-2 {
-  margin-right: 1rem;
+  margin-right: 62px !important;
+}
+
+.catalog .col-md-2:last-child {
+  margin-right: 0rem !important;
 }
 
 /* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Deals of the week --------------------------------------------------- */
 .deals-pic {
-  margin-left: -11rem;
+  margin-left: 19rem;
 }
 /* --------------------------------------------------Deals of the week Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Image Overlay--------------------------------------------------- */
 .img-overlay {
-  width: 1445px;
+  width: 1496px;
   background: linear-gradient(
       rgba(217, 217, 217, 0.79),
       rgba(217, 217, 217, 0.79)
