--- a/CSS/index_responsive.css
+++ b/CSS/index_responsive.css
@@ -2,6 +2,9 @@
   .category-list {
     display: none !important;
   }
+  .catalog .col-md-2 {
+    margin-right: 0px !important;
+  }
 }
 
 @media (max-width: 768px) {
@@ -12,9 +15,7 @@
     margin-left: 5px;
     margin-right: 5px;
   }
-  .catalog .col-md-2 {
-    margin-right: 0em;
-  }
+
   .deals-pic {
     margin-left: 0rem;
   }
@@ -80,9 +81,6 @@
   .catalog .card {
     width: 10rem;
   }
-  .catalog .col-md-2 {
-    margin-right: 2rem;
-  }
 
   .hurry-up {
     font-size: 20px;
@@ -143,9 +141,6 @@
   .catalog .card {
     width: 13rem;
   }
-  .catalog .col-md-2 {
-    margin-right: 2rem;
-  }
 
   .deals-of-the-week1 img {
     width: 246px;
@@ -170,9 +165,11 @@
   .submit-btn {
     margin-right: 10rem !important;
   }
-  .catalog .col-md-2 {
-    margin-right: 2.56rem;
+
+  .catalog .card {
+    width: 14rem;
   }
+
   .clerical {
     font-size: 64px;
     margin: 4rem 0 0 2.5rem;
