--- a/CSS/index.css
+++ b/CSS/index.css
@@ -106,7 +106,6 @@ body {
   margin-top: -13px;
   margin-left: -10px;
 }
-
 /* ---------------------------------------------------Navbar Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Category Style --------------------------------------------------- */
@@ -117,7 +116,11 @@ body {
   color: white;
   padding: 0.87em 1em;
   border-radius: 0.7em;
-  /* margin-left: 13%; */
+  transition: all 0.2s ease-in;
+}
+
+.category-btn:hover {
+  transform: scale(1.03);
 }
 
 .customer-service {
@@ -136,8 +139,26 @@ body {
 }
 
 .category-list li a {
+  position: relative;
   color: black;
   text-decoration: none;
+  padding-bottom: 4px;
+}
+
+.category-list li a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 2px;
+  background-color: var(--yellow-color);
+  transition: width 500ms ease-out;
+}
+
+.category-list li a:hover::before {
+  width: 100%;
+  left: 0;
 }
 
 .contact {
@@ -187,6 +208,11 @@ body {
   margin: 2.5rem 0 0 1rem;
   color: white;
   border: none !important;
+  transition: all 300ms ease-in-out;
+}
+
+.read-more:hover {
+  transform: scale(0.95);
 }
 /* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */
 
@@ -251,7 +277,13 @@ body {
   color: white;
   margin: 4rem 0rem 0 3rem;
   font-family: "Montserrat", sans-serif;
+  transition: all 250ms ease-in;
 }
+
+.office-btn:hover {
+  transform: scale(0.96);
+}
+
 .shop-now-btn {
   color: white;
   padding: 4px 12px;
@@ -260,6 +292,11 @@ body {
   border: none;
   margin: 10rem 0rem 0 3rem;
   font-family: "Montserrat", sans-serif;
+  transition: all 300ms ease-in;
+}
+
+.shop-now-btn:hover {
+  transform: scale(0.96);
 }
 
 /* ------------------------------------------------Office and School Ends------------------------------------------------ */
@@ -367,5 +404,9 @@ body {
   height: 33px;
   width: 100px;
   border-radius: 0px;
+}
+.footer-text {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
 }
 /* ---------------------------------------------------Footer Ends--------------------------------------------------- */
