--- a/Pages/AboutUs/about.css
+++ b/Pages/AboutUs/about.css
@@ -118,7 +118,11 @@ body {
   color: white;
   padding: 0.87em 1em;
   border-radius: 0.7em;
-  /* margin-left: 13%; */
+  transition: all 0.2s ease-in;
+}
+
+.category-btn:hover {
+  transform: scale(1.03);
 }
 
 .customer-service {
@@ -137,8 +141,26 @@ body {
 }
 
 .category-list li a {
+  position: relative;
   color: black;
   text-decoration: none;
+  padding-bottom: 4px;
+}
+
+.category-list li a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 2px;
+  background-color: var(--yellow-color);
+  transition: width 500ms ease-out;
+}
+
+.category-list li a:hover::before {
+  width: 100%;
+  left: 0;
 }
 
 .contact {
