--- a/Pages/ContactUs/responsive_contact.css
+++ b/Pages/ContactUs/responsive_contact.css
@@ -20,6 +20,12 @@
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  h1 {
+    font-size: 42px;
+  }
+  p {
+    font-size: 16px !important;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -36,6 +42,27 @@
 
 /*  X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  h1 {
+    font-size: 48px;
+  }
+  p {
+    font-size: 18px !important;
+  }
+
+  .contact-form input[type="text"] {
+    font-size: 16px !important;
+  }
+
+  .contact-form .form-group textarea {
+    font-size: 16px !important;
+  }
+
+  .contact-form .form-group textarea::placeholder {
+    font-size: 15px;
+  }
+  .contact-form input::placeholder {
+    font-size: 15px;
+  }
   .category-list {
     margin-left: -30rem;
   }
