--- a/CSS/index_responsive.css
+++ b/CSS/index_responsive.css
@@ -38,9 +38,6 @@
     font-size: 20px;
   }
 
-  .read-more {
-  }
-
   .add-btn {
     margin-left: 0rem;
   }
@@ -56,6 +53,21 @@
   .deals-of-the-week1 img {
     width: 200px;
     height: 220px;
+  }
+  h4 {
+    font-size: 16px;
+  }
+
+  .login {
+    font-size: 30px !important;
+  }
+
+  .login-email input::placeholder,
+  .login-password input::placeholder {
+    font-size: 16px;
+  }
+  .login-form-wrapper {
+    top: 4%;
   }
 }
 
@@ -82,8 +94,6 @@
     font-size: 20px;
   }
 
-  .read-more {
-  }
   .add-btn {
     margin-left: 2.56rem;
   }
@@ -95,6 +105,22 @@
   .deals-of-the-week1 img {
     width: 220px;
     height: 240px;
+  }
+
+  h4 {
+    font-size: 17px !important;
+  }
+
+  .login {
+    font-size: 40px !important;
+  }
+
+  .login-email input::placeholder,
+  .login-password input::placeholder {
+    font-size: 17px;
+  }
+  .login-form-wrapper {
+    top: 60%;
   }
 }
 
@@ -123,9 +149,6 @@
     font-size: 20px;
   }
 
-  .read-more {
-  }
-
   .add-btn {
     margin-left: 5.2rem;
   }
@@ -141,6 +164,21 @@
 
   .deals-of-the-week1 {
     margin-right: 25rem !important;
+  }
+  h4 {
+    font-size: 18px !important;
+  }
+
+  .login {
+    font-size: 50px !important;
+  }
+
+  .login-email input::placeholder,
+  .login-password input::placeholder {
+    font-size: 18px;
+  }
+  .login-form-wrapper {
+    top: 6%;
   }
 }
 
