--- a/CSS/index_responsive.css
+++ b/CSS/index_responsive.css
@@ -69,6 +69,16 @@
   .login-form-wrapper {
     top: 4%;
   }
+  .facebookandgoogle {
+    display: block !important;
+  }
+  .mobile_singin_option {
+    display: none !important;
+  }
+
+  .lines {
+    width: 240px;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
