--- a/CSS/index.css
+++ b/CSS/index.css
@@ -604,7 +604,7 @@ body {
   z-index: 2;
   width: 100%;
   max-width: 1000px;
-  height: 780px;
+  height: 830px;
   background: #ffffff;
   padding: 0 1em 0 1em;
   box-shadow: inset 0px 16.6667px 16.6667px #ffdd2c;
@@ -704,4 +704,11 @@ body {
 
 .register-btn:hover {
   transform: scale(0.95);
+}
+
+.error {
+  width: 535px;
+  text-align: left;
+  margin: 1em auto;
+  color: #ff3333;
 }
