--- a/Pages/AboutUs/about.css
+++ b/Pages/AboutUs/about.css
@@ -36,6 +36,15 @@ h2 {
   font-weight: 600 !important;
 }
 
+h4 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16.5px;
+  line-height: 20px;
+  color: #000000;
+}
+
 body {
   background-color: var(--white-color);
 }
@@ -122,6 +131,18 @@ p {
 .white-circle {
   margin-top: -13px;
   margin-left: -10px;
+}
+
+.nav-item .nav-login {
+  background: transparent;
+  outline: none;
+  border: none;
+}
+
+.blur {
+  transition: all 500ms ease-out;
+  filter: blur(8px);
+  z-index: 0;
 }
 
 /* ---------------------------------------------------Navbar Style Ends--------------------------------------------------- */
@@ -260,3 +281,225 @@ p {
   border-radius: 0px;
 }
 /* ---------------------------------------------------Footer Ends--------------------------------------------------- */
+
+/* ---------------------------------------------------Login Style------------------------------------------------- */
+
+.close-btn {
+  cursor: pointer;
+  width: 35px;
+}
+
+.login-form {
+  max-width: 1000px;
+  height: 450px;
+  background-color: white;
+  box-shadow: inset 0px 16.6667px 16.6667px #ffdd2c;
+  border-radius: 41.6667px;
+  padding: 0 2em;
+  position: fixed !important;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0) !important;
+  visibility: hidden;
+  width: 100%;
+  z-index: 2;
+  transition: all 800ms ease;
+  visibility: hidden;
+  z-index: 2;
+}
+
+.open-login-form-popup {
+  transform: translate(-50%, -50%) scale(1) !important;
+  visibility: visible;
+  opacity: 1;
+  z-index: 999999999;
+}
+
+.login {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px !important;
+  color: #404040;
+}
+
+.register-here {
+  color: #ff0000;
+  cursor: pointer;
+  background-color: transparent;
+  outline: none;
+  border: none;
+}
+
+.login-email,
+.login-password {
+  max-width: 440px;
+  border-bottom: 1.66667px solid #f0d028;
+  margin: 1.5rem auto;
+}
+
+.login-email input,
+.login-password input {
+  border: none;
+  padding: 0.8em;
+}
+
+.login-email input:focus,
+.login-password input:focus {
+  border: none;
+  outline: none;
+}
+
+.login-email input::placeholder,
+.login-password input::placeholder {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  color: #bbbbbb;
+}
+
+.login-email img,
+.login-password img {
+  width: 25px;
+}
+
+.form-submit button {
+  background: #f0d028;
+  border-radius: 83.3333px;
+  width: 233.33px;
+  height: 50px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  outline: none;
+  border: none;
+  transition: all 300ms ease;
+}
+
+.form-submit input:hover {
+  transform: scale(0.95);
+}
+
+/* --------------------------------------------------Login Style Ends-------------------------------------------------- */
+
+/* --------------------------------------------------Register  Style -------------------------------------------------- */
+.reistration-form {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  z-index: 2;
+  width: 100%;
+  max-width: 1000px;
+  height: 830px;
+  background: #ffffff;
+  padding: 0 1em 0 1em;
+  box-shadow: inset 0px 16.6667px 16.6667px #ffdd2c;
+  border-radius: 41.6667px;
+  transition: all 800ms ease;
+}
+
+.open-registration-form {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.google-divs {
+  background-color: #d9d9d9;
+  width: 250px;
+  height: 50.38px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.facebook-divs {
+  width: 250px;
+  height: 50.38px;
+  background-color: #248ddb;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.mobile_singin_option div {
+  margin: 0 auto;
+  width: 250px !important;
+}
+
+.facebookandgoogle {
+  display: none !important;
+}
+
+.already {
+  font: 16px;
+}
+
+.lines {
+  width: 100px;
+  height: 3px;
+}
+
+#reg-email,
+#reg-email:focus,
+#reg-password,
+#confirm-password,
+#confirm-password:focus,
+#reg-password:focus,
+#phone-number,
+#phone-number:focus {
+  border: none !important;
+  outline: none !important;
+}
+
+.wrapper {
+  border-bottom: 1px solid #f0d028;
+  max-width: 535px;
+  margin: 0 auto;
+}
+
+#radio {
+  appearance: none; /* Hide default radio button */
+  width: 15px;
+  height: 15px;
+  border-radius: 50%; /* Make radio button circular */
+  border: 2px solid #f0d028; /* Add border */
+  outline: none; /* Remove outline when radio button is focused */
+  transition: border-color 0.2s ease-in-out; /* Add transition effect */
+}
+
+#radio:checked {
+  background-color: #f0d028; /* Change border color when radio button is checked */
+}
+
+.wrapper input::placeholder {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #bbbbbb;
+}
+
+.register-btn {
+  width: 255px;
+  height: 50px;
+  outline: none;
+  box-shadow: none;
+  background: #f0d028;
+  border-radius: 83.3333px;
+  border: none;
+  transition: all 250ms ease;
+}
+
+.register-btn:hover {
+  transform: scale(0.95);
+}
+
+.error {
+  width: 535px;
+  text-align: left;
+  margin: 1em auto;
+  color: #ff3333;
+}
