--- a/Pages/Yourcart/yourcart_responsive.css
+++ b/Pages/Yourcart/yourcart_responsive.css
@@ -2,6 +2,9 @@
   .category-list {
     display: none !important;
   }
+  .catalog .col-md-2 {
+    margin-right: 0px !important;
+  }
 }
 
 @media (max-width: 768px) {
@@ -20,11 +23,16 @@
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  h1 {
-    font-size: 42px;
+  .clerical {
+    font-size: 40px !important;
   }
-  p {
-    font-size: 16px !important;
+
+  .hurry-up {
+    font-size: 20px;
+  }
+
+  h4 {
+    font-size: 16px;
   }
 
   .login {
@@ -38,16 +46,6 @@
   .login-form-wrapper {
     top: 4%;
   }
-  .facebookandgoogle {
-    display: block !important;
-  }
-  .mobile_singin_option {
-    display: none !important;
-  }
-
-  .lines {
-    width: 240px;
-  }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -59,6 +57,14 @@
   .logo {
     width: 265px;
     height: 49px;
+  }
+
+  .clerical {
+    font-size: 56px !important;
+  }
+
+  h4 {
+    font-size: 17px !important;
   }
 
   .login {
@@ -76,27 +82,6 @@
 
 /*  X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  h1 {
-    font-size: 48px;
-  }
-  p {
-    font-size: 18px !important;
-  }
-
-  .contact-form input[type="text"] {
-    font-size: 16px !important;
-  }
-
-  .contact-form .form-group textarea {
-    font-size: 16px !important;
-  }
-
-  .contact-form .form-group textarea::placeholder {
-    font-size: 15px;
-  }
-  .contact-form input::placeholder {
-    font-size: 15px;
-  }
   .category-list {
     margin-left: -30rem;
   }
@@ -110,6 +95,22 @@
 
   .nav-item {
     margin: 0.32em;
+  }
+
+  .clerical {
+    font-size: 58px;
+  }
+
+  .hurry-up {
+    font-size: 20px;
+  }
+
+  .add-btn {
+    margin-left: 5.2rem;
+  }
+
+  h4 {
+    font-size: 18px !important;
   }
 
   .login {
@@ -137,6 +138,14 @@
 
   .submit-btn {
     margin-right: 10rem !important;
+  }
+
+  .clerical {
+    font-size: 64px;
+  }
+
+  .hurry-up {
+    font-size: 20px;
   }
 }
 
