--- a/Pages/DealsOfTheDay/dealsoftheday.css
+++ b/Pages/DealsOfTheDay/dealsoftheday.css
@@ -24,7 +24,7 @@ font-family: 'Libre Bodoni', serif;
 }
 
 h1 {
-  font-size: 22px;
+  font-size: 40px;
   font-family: "Inter", sans-serif;
   font-weight: 600;
 }
@@ -245,6 +245,58 @@ body {
 }
 
 /* ---------------------------------------------------Category Style Ends--------------------------------------------------- */
+
+/* ---------------------------------------------------Swiper --------------------------------------------------- */
+swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  border-radius: 30px;
+}
+
+.swiper-pagination-bullet {
+  background-color: #ffd600 !important;
+}
+/* ---------------------------------------------------Swiper Ends--------------------------------------------------- */
+/* ---------------------------------------------------Main Section--------------------------------------------------- */
+
+.deals {
+  color: var(--yellow-color);
+}
+
+.img-wrapper img {
+  /* max-width: 280px !important; */
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-top: 0.8em;
+}
+.img-wrapper img:hover {
+  scale: 0.95;
+}
+
+.img-wrapper div {
+  overflow: hidden !important;
+}
+
+.icon {
+  cursor: pointer;
+}
+/* ---------------------------------------------------Main Section Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Footer --------------------------------------------------- */
 .list-group {
